# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import sessionsRouter from "./sessions";
 import setupsRouter from "./setups";
 import trackNotesRouter from "./trackNotes";
+import hardwareRouter from "./hardware";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(sessionsRouter);
 router.use(setupsRouter);
 router.use(trackNotesRouter);
+router.use(hardwareRouter);
 
 export default router;
